--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "Jorge Méndez Ortega <jorge.mendez.ortega@gmail.com>",
     "dependencies": {
         "cli-color": "2.0.0",
-        "compress": "0.99.0",
+        "compression": "1.7.4",
         "cors": "2.8.5",
         "express": "4.17.1",
         "helmet": "3.21.3"
