--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "author": "Jorge Méndez Ortega <jorge.mendez.ortega@gmail.com>",
     "dependencies": {
+        "browser-sync": "^2.26.7",
         "cli-color": "2.0.0",
         "compression": "1.7.4",
         "cors": "2.8.5",
@@ -31,7 +32,7 @@
         "url": "git@GitHub:OrcaPracticas/api-pokemon.git"
     },
     "scripts": {
-        "dev": "nodemon .",
+        "dev": "export NODE_ENV=develop; nodemon .",
         "start": "node ."
     },
     "version": "1.0.0"
