--- a/.babelrc
+++ b/.babelrc
@@ -8,8 +8,8 @@
             "module-resolver",
             {
                 "alias": {
-                    "Api": "./app/commons/",
-                    "ApiDB": "./db/DataBase.json"
+                    "Api": "./app/src/commons/",
+                    "ApiDB": "./db/src/DataBase.json"
                 }
             }
         ]
