--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "url": "git@GitHub:OrcaPracticas/api-pokemon.git"
     },
     "scripts": {
-        "build": "babel  ./app/src/ -d ./build/",
         "dev": "export NODE_ENV=develop; nodemon ./run_server.js",
+        "prestart": "babel  ./app/src/ -d ./build/",
         "start": "node ./build/Server.js"
     },
     "version": "1.0.0"
