--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "author": "Jorge Méndez Ortega <jorge.mendez.ortega@gmail.com>",
     "dependencies": {
-        "browser-sync": "2.26.7",
         "cli-color": "2.0.0",
         "compression": "1.7.4",
         "cors": "2.8.5",
@@ -17,6 +16,7 @@
         "babel-plugin-inline-json-import": "0.3.2",
         "babel-plugin-module-resolver": "4.0.0",
         "babel-preset-minify": "0.5.1",
+        "browser-sync": "2.26.7",
         "nodemon": "2.0.2"
     },
     "keywords": [
@@ -25,7 +25,7 @@
         "pokemons"
     ],
     "license": "MIT",
-    "main": "/build/Serve.js",
+    "main": "./app/build/Server.js",
     "name": "api-pokemon",
     "private": false,
     "repository": {
@@ -37,5 +37,5 @@
         "build": "babel ./app/src/ -d ./app/build/",
         "start": "npm run build; node ./app/build/Server.js"
     },
-    "version": "1.1.0"
+    "version": "1.2.0"
 }
