--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
         "@babel/core": "7.8.6",
         "@babel/preset-env": "7.8.6",
         "@babel/register": "7.8.6",
+        "@types/jest": "25.1.3",
+        "babel-jest": "25.1.0",
         "babel-plugin-inline-json-import": "0.3.2",
         "babel-plugin-module-resolver": "4.0.0",
         "babel-preset-minify": "0.5.1",
         "browser-sync": "2.26.7",
-        "nodemon": "2.0.2"
+        "chai": "4.2.0",
+        "chai-http": "4.3.0",
+        "jest": "25.1.0",
+        "mocha": "7.1.0",
+        "nodemon": "2.0.2",
+        "nyc": "15.0.0"
     },
     "keywords": [
         "expressjs",
@@ -35,7 +42,9 @@
     "scripts": {
         "dev": "export NODE_ENV=develop; nodemon ./run_server.js",
         "build": "babel ./app/src/ -d ./app/build/",
-        "start": "npm run build; node ./app/build/Server.js"
+        "start": "npm run build; node ./app/build/Server.js",
+        "test": "mocha",
+        "test:coverage": "nyc -check-coverage --lines 98  --reporter=html mocha"
     },
     "version": "1.2.0"
 }
