--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "compression": "1.7.4",
         "cors": "2.8.5",
         "express": "4.17.1",
-        "helmet": "3.21.3"
+        "helmet": "3.21.3",
+        "mongoose": "5.9.4"
     },
     "description": "Creando una api de lo primeros 150 pokemons, se integrara con heroku",
     "devDependencies": {
@@ -15,6 +16,7 @@
         "@babel/register": "7.8.6",
         "babel-plugin-inline-json-import": "0.3.2",
         "babel-plugin-module-resolver": "4.0.0",
+        "babel-plugin-transform-define": "2.0.0",
         "babel-preset-minify": "0.5.1",
         "chai": "4.2.0",
         "chai-http": "4.3.0",
